[package]
name = "nagotiator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.8"
tokio = {version = "1.17.0", features = ["full"]}
serde = {version = "1.0.136", features = ["derive"]}
regex = "1.5.5"
clap = { version = "3.1.9", features = ["derive"] }
nagrs = { git = "https://github.com/k0f1sh/nagrs", branch = "main" }
anyhow = "1.0.57"
thiserror = "1.0.30"
